# LinkUp

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: agent.yml  bridge.yml  dashboard.yml  mobile.yml
agent/: .env.example  composer.json
agent/bootstrap/: app.php
agent/config/: app.php  cors.php  reverb.php  services.php
agent/routes/: api.php  web.php  (+1 more)
bridge/: .env.example  README.md  build-binary.sh  pyproject.toml  run.py
bridge/app/: __init__.py  config.py  deps.py  main.py
bridge/app/routes/: clipboard.py  mdns.py  preview.py  transfer.py
bridge/app/services/: cert.py  clipboard.py  links.py  mdns.py  preview.py  transfer.py
bridge/linkup_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bridge/tests/: conftest.py  test_cert.py  test_clipboard.py  test_config.py  test_health.py  test_mdns.py  test_mdns_integration.py  test_preview.py  test_transfer.py
dashboard/: next.config.ts  package.json  pnpm-lock.yaml
docs/: Linkup-Audit-S1J4-Pass2.md  Linkup-Audit-S1J4.md  Linkup-CDC-v1_0.docx  Linkup-CDC-v2_0.md  Linkup-Flutter-Ligne-Par-Ligne.md  Linkup-Plan-Execution.md  Linkup-Python-Ligne-Par-Ligne.md  Linkup-Runbook-Local.md  Linkup-Schema-Flux-ASCII.md  Linkup-Test-Multi-PC.md  Linkup-Tutoriel-Architecture.md  stack-roles.md
infra/: README-install.md  install-linux.sh  vps-setup-done.md
mobile/: .gitignore  README.md  pubspec.yaml
packaging/: README-deb.md  build-deb.sh  system-dependencies.md
videohub/: .env.example  requirements.txt  run.py
vitrine/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml
(+294 files in other folders)
