[project]
name = "linkup-bridge"
version = "0.1.0"
description = "Linkup OS bridge — clipboard, camera, processes, yt-dlp, Whisper"
requires-python = ">=3.11"
authors = [{ name = "Mahamane Korobara", email = "korobaramahamane311@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1",
    "zeroconf>=0.135",
    "cryptography>=43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests reels (zeroconf/uvicorn) plus lents, peuvent etre sautes via LINKUP_SKIP_INTEGRATION=1",
]
